--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     </div>
 
     <div class="container team">
-        <img src="img/thandi.jpg" class="img-thumbnail rounded-circle" width="90" />
-        <img src="img/john.jpg" class="img-thumbnail rounded-circle" width="90" />
+        <img src="./img/thandi.jpg" class="img-thumbnail rounded-circle" width="90" />
+        <img src="/img/john.jpg" class="img-thumbnail rounded-circle" width="90" />
         <img src="img/sally.jpg" class="img-thumbnail rounded-circle" width="90" />
         <img src="img/lungi.jpg" class="img-thumbnail rounded-circle" width="90" />
         <img src="img/bob.jpg" class="img-thumbnail rounded-circle" width="90" />
